# uef-kuopio-lunch-tray

./: LICENSE  README.md
.github/workflows/: windows-build.yml
plasma5/contents/ui/: MenuFormatter.js  main.qml
plasma5/contents/ui/config/: ConfigGeneral.qml
plasma5/tests/: parser-check.js
plasma5/tests/fixtures/: pranzeria-snippet.html
plasma6/: metadata.json
plasma6/contents/config/: main.xml
plasma6/contents/ui/: MenuFormatter.js  main.qml
plasma6/contents/ui/config/: ConfigGeneral.qml
plasma6/tests/: parser-check.js
windows-tray/: Cargo.toml  README_windows.md  build.rs
windows-tray/assets/: generate-icon-square.sh  icon.rc
windows-tray/assets/fonts/: README.md
windows-tray/src/: antell.rs  api.rs  app.rs  cache.rs  custom_themes.rs  favorites.rs  format.rs  gpu.rs  log.rs  main.rs  model.rs  popup.rs  restaurant.rs  settings.rs  startup.rs  tray.rs  update.rs  util.rs  winmsg.rs
windows-tray/src/api/: antell_provider.rs  compass.rs  huomen.rs  mod.rs  pranzeria.rs
windows-tray/src/app/: actions.rs  fetch.rs  mod.rs  update_check.rs
windows-tray/src/popup/: animation.rs  content.rs  interaction.rs  layout.rs  mod.rs  render.rs  theme.rs
windows-tray/src/popup/layout/: cache.rs  text.rs  window.rs
windows-tray/src/popup/render/: layer.rs  text.rs
