[package]
name = "compass-lunch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
html-escape = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
regex = "1.11"
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["local-offset"] }
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Console",
  "Win32_System_Registry",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
