[package]
name = "compass-lunch"
version = "1.3.4"
edition = "2021"

[dependencies]
anyhow = "1.0"
html-escape = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
regex = "1.11"
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["local-offset"] }
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Console",
  "Win32_System_Registry",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
embed-resource = "3.0"
